[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/GameUI.gd" type="Script" id=1]
[ext_resource path="res://UI/DebugWeather/DebugWeather.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/EnvironmentConditions/EnvironmentConditions.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/CharacterPlate/CharacterPlate.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Chat/Chat.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Shortcuts/Shortcuts.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/StatusValues/StatusValues.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/BestiaPortraits/BestiaPortraits.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Inventory/Inventory.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/AttackList/AttackList.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Inventory/ItemDropZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Equipment/Equipment.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/GameMenu/GameMenu.tscn" type="PackedScene" id=13]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDropZone" parent="." instance=ExtResource( 11 )]
visible = false
margin_top = -3.0
margin_bottom = -3.0
dropzone = "drop_item"

[node name="WeatherDebug" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -220.0
margin_top = 70.0
margin_right = -10.0
margin_bottom = 184.0

[node name="EnvironmentConditions" parent="." instance=ExtResource( 3 )]

[node name="CharacterPlate" parent="." instance=ExtResource( 4 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 84.0

[node name="Chat" parent="." instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = -188.0
margin_right = 400.0

[node name="Shortcuts" parent="." instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -158.0
margin_right = 0.0
margin_bottom = 0.0

[node name="BestiaPortraits" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 110.0
margin_bottom = 161.0

[node name="AttackList" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Equipment" parent="." instance=ExtResource( 12 )]
visible = false

[node name="StatusValues" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Inventory" parent="." instance=ExtResource( 9 )]
visible = false
margin_right = 584.0
margin_bottom = 285.0

[node name="GameMenu" parent="." instance=ExtResource( 13 )]
visible = false
[connection signal="item_dropped" from="ItemDropZone" to="." method="_on_ItemDropZone_item_dropped"]
[connection signal="equip_pressed" from="CharacterPlate" to="." method="_on_CharacterPlate_equip_pressed"]
[connection signal="on_attacks_pressed" from="CharacterPlate" to="." method="_on_CharacterPlate_on_attacks_pressed"]
[connection signal="on_inventory_pressed" from="CharacterPlate" to="." method="_on_CharacterPlate_on_inventory_pressed"]
[connection signal="status_values_pressed" from="CharacterPlate" to="." method="_on_CharacterPlate_status_values_pressed"]
